--- a/TodoLib/templates/create.html
+++ b/TodoLib/templates/create.html
@@ -1,63 +1,79 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>ToDo-Tracker</title>
-  	<meta charset="utf-8">
-  	<meta name="viewport" content="width=device-width, initial-scale=1">
-  	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
+
+    <title>ToDo-Tracker</title>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+
+
+    <!-- Custom styles for this template -->
+    <link href="{% static "site.css" %}" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
-  <body>
+<body>
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">ToDo-Tracker</a>
+            </div>
+            <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li><a href="index">Overview</a></li>
+                <li class="active"><a href="create">Create</a></li>
+            </ul>
+            </div><!--/.nav-collapse -->
+        </div>
+    </div>
 
-	
-	<nav class="navbar navbar-inverse">
-		<div class="container-fluid">
-   			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span> 
-				</button>
-   			<a class="navbar-brand" href="#">ToDo-Tracker</a>
-   			</div>
- 			<div class="collapse navbar-collapse" id="myNavbar">
-       			<ul class="nav navbar-nav">
-					<li><a href="website.html">Overview</a></li>
-          			<li class="active"><a href="create.html">Create</a></li>
-          			<li><a href="edit.html">Edit</a></li>
-          			<li><a href="impressum.html">Contact</a></li>
-       			</ul>
-      		</div>
-    	</div>
-  	</nav>
-  
-	<div class="container">
-  	<h2>Create a ToDo</h2>
-  	
-  			<label for="name">Name:</label>
-			<div class="form-group">
-      			<input type="text" class="form-control" id="name" placeholder="Enter ToDo name">
-    		</div>
-    		<label>Description:</label>
-    		<div class="form-group">
-      			<textarea class="form-control" rows="3" placeholder="Enter description with less than 160 words"></textarea>
-    		</div>
-   			<label>Deadline:</label>
-    		<div class="form-group">
-      			<input type="text" class="form-control" placeholder="Enterdeadline">
-    		</div>
-		<p></p>
-			<label>Progress:</label>
-    		<div class="input-group">
-      			<input type="text" class="form-control" placeholder="Enter progress percentage" aria-describedby="basic-addon">
-				<span class="input-group-addon" id="basic-addon">%</span>
-			</div>
-		<p></p>
-			<button type="submit" class="btn btn-default">Submit</button>
-   	</div>
-	
-  </body>
+
+{% block content %}
+<div class="container">
+<h1>Create Todo</h1>
+<form method="post" class="form">
+    {% csrf_token %}
+    {% for field in form %}
+        <div class="form-group">
+        {{ field.errors }}
+        {{ field.label_tag }}
+        {{ field }}
+        </div>
+    {% endfor %}
+    <input type="submit" value="Submit" />
+</form>
+{% endblock %}   
+
+
+    </div><!-- /.container -->
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+</body>
 </html>
-
-	
