--- a/TodoLib/templates/contact.html
+++ b/TodoLib/templates/contact.html
@@ -37,24 +37,52 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">ToDo-Tracker</a>
+                <a class="navbar-brand" href="index">ToDo-Tracker</a>
             </div>
             <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Overview</a></li>
-                <li><a href="#about">Create</a></li>
+                <li><a href="index">Overview</a></li>
+                <li><a href="create">Create</a></li>
+				<li  class="active"><a href="contact">Contact</a></li>
             </ul>
             </div><!--/.nav-collapse -->
         </div>
     </div>
 
-    <div class="container">
+  	<div class="container">
+  	<h2>Impressum</h2>
+			<div class="col-lg-6">
+    		<address>
+				<strong>Cheng Chen</strong><br>
+				hehe 91<br>
+				1012378 Berlin<br>
+				<abbr title="Phone">P:</abbr> (123) 4567890
+			</address>
 
-        <div class="starter-template">
-        {% block content %}Hallo{% endblock %}
-        </div>
+			<address>
+				<strong>Problems and Feedback</strong><br>
+				<a href="mailto:#">chengchen@example.com</a>
+			</address>
+			</div>
+			
+			<div class="col-lg-6">
+    		<address>
+				<strong>Qi Yang</strong><br>
+				heheh<br>
+				10779 Berlin<br>
+				<abbr title="Phone">P:</abbr> (123) 4567890
+			</address>
 
-    </div><!-- /.container -->
+			<address>
+				<strong>Problems and Feedback</strong><br>
+				<a href="mailto:#">qi.yang@example.com</a>
+			</address>
+			</div>
+			
+	</div>
+
+
+ </div><!-- /.container -->
 
 
     <!-- Bootstrap core JavaScript
