--- a/TodoLib/templates/index.html
+++ b/TodoLib/templates/index.html
@@ -37,12 +37,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">ToDo-Tracker</a>
+                <a class="navbar-brand" href="index">ToDo-Tracker</a>
             </div>
             <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li  class="active"><a href="index">Overview</a></li>
                 <li><a href="create">Create</a></li>
+				<li><a href="contact">Contact</a></li>
             </ul>
             </div><!--/.nav-collapse -->
         </div>
