--- a/TodoLib/templates/create.html
+++ b/TodoLib/templates/create.html
@@ -50,21 +50,36 @@
     </div>
 
 
-{% block content %}
-<div class="container">
-<h1>Create Todo</h1>
-<form method="post" class="form">
-    {% csrf_token %}
-    {% for field in form %}
-        <div class="form-group">
-        {{ field.errors }}
-        {{ field.label_tag }}
-        {{ field }}
-        </div>
-    {% endfor %}
-    <input type="submit" value="Submit" />
-</form>
-{% endblock %}   
+ 
+ 	<div class="container">
+  	<h2>Create a ToDo</h2>
+	
+	<form action="/create" method="post" class="form-horizontal">
+        {% csrf_token %}
+  	
+  			<label for="name">Name:</label>
+			<div class="form-group">
+      			<input type="text" class="form-control" id="name" placeholder="Enter ToDo name">
+    		</div>
+    		<label>Description:</label>
+    		<div class="form-group">
+      			<textarea class="form-control" rows="3" placeholder="Enter description with less than 160 words"></textarea>
+    		</div>
+   			<label>Deadline:</label>
+    		<div class="form-group">
+      			<input type="text" class="form-control" placeholder="Enterdeadline">
+    		</div>
+		<p></p>
+			<label>Progress:</label>
+    		<div class="input-group">
+      			<input type="text" class="form-control" placeholder="Enter progress percentage" aria-describedby="basic-addon">
+				<span class="input-group-addon" id="basic-addon">%</span>
+			</div>
+		<p></p>
+			<button type="submit" class="btn btn-default">Submit</button>
+   	</div>
+	 </form>
+
 
 
     </div><!-- /.container -->
