--- a/TodoLib/templates/index.html
+++ b/TodoLib/templates/index.html
@@ -61,12 +61,15 @@
         <th>Actions</th>
    
     </tr>
-    {% for todo in object_list %}
+    {% for todos in object_list %}
         <tr>
             <td>{{ todo.name }}</td>
-            <td>{{ todo.genre }}</td>
-			<td>{{ todo.releaseDate }}</td>
-            <td>{{ todo.price }}</td>
+            <td>{{ todo.description }}</td>
+			<td>{{ todo.deadline }}</td>
+            <td>{{ todo.progress }}</td>
+			   <td> <button type="delete" class="btn btn-default">Delete</button> </td>
+		         
+			    <td> <a href="edit.html" class="btn btn-default">Edit</a></td>  
 
  
         </tr>
