--- a/TodoLib/templates/contact.html
+++ b/TodoLib/templates/contact.html
@@ -37,13 +37,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index">ToDo-Tracker</a>
+                <a class="navbar-brand" href="/todo">ToDo-Tracker</a>
             </div>
             <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="index">Overview</a></li>
-                <li><a href="create">Create</a></li>
-				<li  class="active"><a href="contact">Contact</a></li>
+                <li><a href="/todo">Overview</a></li>
+                <li><a href="/todo/create">Create</a></li>
+				<li  class="active"><a href="/todo/contact">Contact</a></li>
             </ul>
             </div><!--/.nav-collapse -->
         </div>
