--- a/TodoLib/templates/index.html
+++ b/TodoLib/templates/index.html
@@ -37,13 +37,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index">ToDo-Tracker</a>
+                  <a class="navbar-brand" href="/todo">ToDo-Tracker</a>
             </div>
             <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li  class="active"><a href="index">Overview</a></li>
-                <li><a href="create">Create</a></li>
-				<li><a href="contact">Contact</a></li>
+                <li  class="active"><a href="/todo">Overview</a></li>
+                <li><a href="/todo/create">Create</a></li>
+				<li><a href="/todo/contact">Contact</a></li>
             </ul>
             </div><!--/.nav-collapse -->
         </div>
@@ -66,10 +66,11 @@
             <td>{{ todo.name }}</td>
             <td>{{ todo.description }}</td>
 			<td>{{ todo.deadline }}</td>
-            <td>{{ todo.progress }}</td>
-			   <td> <button type="delete" class="btn btn-default">Delete</button> </td>
-		         
-			    <td> <a href="edit.html" class="btn btn-default">Edit</a></td>  
+            <td>
+			{{ todo.progress }}%
+			<button type="{% url 'todo:delete' pk=todo.pk %}" class="btn btn-default">Delete</button>      
+			<a href="{% url 'todo:edit' pk=todo.pk %}" class="btn btn-default">Edit</a>
+			</td>  
 
  
         </tr>
