--- a/TodoLib/templates/create.html
+++ b/TodoLib/templates/create.html
@@ -63,7 +63,7 @@
         {{ field }}
         </div>
     {% endfor %}
-    <input type="submit" value="Submit" />
+		<a href="/todo" >   <input type="submit" value="Submit" /> </a>
 </form>
    </div>
 {% endblock %}   
