--- a/TodoLib/templates/TodoLib/todo_confirm_delete.html
+++ b/TodoLib/templates/TodoLib/todo_confirm_delete.html
@@ -11,15 +11,24 @@
 
     <title>ToDo-Tracker</title>
 
+    <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
+    <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 
+
+    <!-- Custom styles for this template -->
     <link href="{% static "site.css" %}" rel="stylesheet">
 
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+
+  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
@@ -38,41 +47,23 @@
             </ul>
             </div><!--/.nav-collapse -->
         </div>
-    </div>
+    </div>	
 
-
-{% block content %}
-<div class="container">
-<h1>ToDo Overview</h1>
-<table class="table table-bordered">
-    <tr>
-        <th>ToDo-Name</th>
-        <th>ToDo-Description</th>
-        <th>Deadline</th>
-        <th>Progress/Actions</th>
-   
-    </tr>
-    {% for todo in object_list %}
-        <tr>
-            <td>{{ todo.name }}</td>
-            <td>{{ todo.description }}</td>
-			<td>{{ todo.deadline }}</td>
-            <td>
-			{{ todo.progress }}%
-			<p></p>
-		<form style="display: inline" action="/todo/edit/{{todo.id}}" method="get">
-					<button>edit</button>
-				</form>
-		
-			<form style="display: inline" action="/todo/delete/{{todo.id}}" method="get">
-					<button>delete</button>
-				</form>
-			</td>
-        </tr>
-    {% endfor %}
-</table>
-{% endblock %}
- </div><!-- /.container -->
+<div class="container">	
+<h1>Delete ToDo</h1>
+	     <form action="/todo/delete/{{todo.id}}/" method="post">
+			Unwiderruflich löschen?
+	    	{% csrf_token %}
+			{{form.as_p}}
+     <div class="control-group">
+	       <div class="controls">
+	         <button type="submit" class="btn btn-default" value="Create" >Delete</button>
+			  <a href="/todo" class="btn btn-default">Cancel</a>
+	       </div>
+	     </div>
+	   </form>
+      </div>
+ 
 
 
     <!-- Bootstrap core JavaScript
@@ -81,5 +72,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+</body>
+</html>
 </body>
 </html>
